# FSAvalidator

./: fsa.py  fsa.txt  input.txt  output.txt  pyproject.toml  result.txt
